   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/

2013-02-04 18:35 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbide/hbide_v.ch
    + Version bump.

  * hbqt/qtnetwork/hbqt_init.cpp
  * hbqt/qtnetwork/qth/QFtp.qth
  * hbqt/qtnetwork/qth/QHttp.qth
  * hbqt/qtnetwork/qth/QHttpHeader.qth
  * hbqt/qtnetwork/qth/QHttpRequestHeader.qth
  * hbqt/qtnetwork/qth/QHttpResponseHeader.qth
  * hbqt/qtnetwork/qth/QUrlInfo.qth
  * hbqt/qtopengl/qth/QGLWidget.qth
    + All modules comiliable with Qt 5.0.1 except for QtWebKit.
       hbmk2 reports: dependency not found "qtwebkit".

2013-02-04 17:39 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqt/hbmk2_qt.hb
    ! Fixed: last commit was not compiling QDirModel.qth.

2013-02-04 17:00 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqt/qtgui/hbqt_hbqabstractitemmodel.cpp
  * hbqt/qtgui/qth/QDirModel.qth
  * hbqt/qtgui/qth/QWindowsStyle.qth
  * hbqt/hbmk2_qt.hb
    + Implemented: necessary constructs to let HbQt compile with 
       Qt 5.0.1 while remaining backward compatible upto 4.8.4.
       QtGui module now compiles fine.

2013-02-04 15:52 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqt/qtgui/qth/QAbstractProxyModel.qth
  * hbqt/qtgui/qth/QApplication.qth
  * hbqt/qtgui/qth/QColorDialog.qth
  * hbqt/qtgui/qth/QDesktopServices.qth
  * hbqt/qtgui/qth/QDirModel.qth
  * hbqt/qtgui/qth/QDrag.qth
  * hbqt/qtgui/qth/QFont.qth
  * hbqt/qtgui/qth/QGraphicsItem.qth
  * hbqt/qtgui/qth/QGraphicsScene.qth
  * hbqt/qtgui/qth/QHeaderView.qth
  * hbqt/qtgui/qth/QImage.qth
  * hbqt/qtgui/qth/QItemSelection.qth
  * hbqt/qtgui/qth/QItemSelectionModel.qth
  * hbqt/qtgui/qth/QLCDNumber.qth
  * hbqt/qtgui/qth/QMatrix.qth